# json-manipulation-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  example.jml
eval/: Cargo.toml
eval/src/: context.rs  error.rs  errors.rs  expr.rs  jml_type.rs  lib.rs  main.rs  stmt.rs  typings.rs  value.rs
eval/src/expr/: binary_op.rs  if_expr.rs  lambda.rs  list_constructor.rs  object_constructor.rs  unary_op.rs
eval/src/stdlib/: list.rs  mod.rs  object.rs
eval/src/value/: bool.rs  float.rs  integer.rs  lambda.rs  list.rs  null.rs  object.rs  string.rs
eval/tests/: bin_op.rs  if_expr.rs  list.rs  unary_op.rs
examples/: example.jml  hof.jml  if.jml  lambda.jml  ord.jml  pluck.jml  real_example.jml  routing.jml  selector.jml  test1.jml  unary_op.jml
jml-cli/: Cargo.toml
jml-cli/src/: cli.rs  lib.rs  log.rs  main.rs  util.rs
lexer/: Cargo.toml
lexer/src/: errors.rs  lib.rs  main.rs  token.rs
lexer/src/token/: errors.rs  literal.rs
lexer/tests/: lexer_tests.rs
parser/: Cargo.toml
parser/src/: ast.rs  jml.lalrpop  lib.rs  main.rs
