[package]
name = "eval"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
parser = { path = "../parser" }
miette = { version = "7.2.0", features = ["fancy"] }
serde = "1.0.209"
serde_json = "1.0.127"
anyhow = "1.0.86"
derive_more = { version = "1", features = ["full"] }
indexmap = { version = "2.5.0", features = ["serde", "std"] }
proptest = "1.5.0"
