[package]
name = "jml-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
parser = { path = "../parser" }
eval = { path = "../eval" }
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
collection = "0.1.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }